--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -130,12 +130,14 @@
 
   <div class='pl-3 mt-2'>
     <label for='common_template'>{{ 'Common Experiment Template'|trans }}</label>
-    {% if App.Config.configArr.debug -%}
-      <!-- [html-validate-disable-block no-deprecated-attr, prefer-native-element, text-content: suppress errors from tinymce] -->
-    {%- endif %}
-    <textarea style='height:400px' class='mceditable' name='common_template' id='common_template'>
-      {{ App.teamArr.common_template|raw }}
-    </textarea>
+    <div>
+      {% if App.Config.configArr.debug -%}
+        <!-- [html-validate-disable-block no-deprecated-attr, prefer-native-element, element-permitted-content: suppress errors from tinymce] -->
+      {%- endif %}
+      <textarea class='mceditable' name='common_template' id='common_template'>
+        {{ App.teamArr.common_template|raw }}
+      </textarea>
+    </div>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
       <button type='button' data-action='patch-team-common-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
@@ -143,7 +145,12 @@
     <hr>
 
     <label for='common_template_md'>{{ 'Common Experiment Template'|trans }} (Markdown)</label>
-    <textarea style='height:400px' class='markdown-textarea form-control mt-2' name='common_template_md' id='common_template_md'>{{ App.teamArr.common_template_md|raw }}</textarea>
+    <div>
+      {% if App.Config.configArr.debug -%}
+        <!-- [html-validate-disable-block text-content: suppress errors from tinymce] -->
+      {%- endif %}
+      <textarea class='markdown-textarea form-control mt-2' name='common_template_md' id='common_template_md'>{{ App.teamArr.common_template_md|raw }}</textarea>
+    </div>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
       <button type='button' data-action='patch-team-common-template-md' class='btn btn-primary'>{{ 'Save'|trans }}</button>
