--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -127,7 +127,7 @@
         <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' style='height:500px;' data-language='{{ App.getJsLang }}' name='body'>{{ Entity.entityData.body }}</textarea>
       {% else %}
         <div>{# << this div is added around the textarea to fix an issue on mobile editor. See #3107 #}
-          <textarea id='e{{ Entity.entityData.id }}' class='mceditable' style='height:500px;'>{{ Entity.entityData.body }}</textarea>
+          <textarea id='e{{ Entity.entityData.id }}' class='mceditable'>{{ Entity.entityData.body }}</textarea>
         </div>
       {% endif %}
       <div class='text-center mt-4'>
