more aria-label

--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -30,25 +30,25 @@
   </button>
 
   {# DUPLICATE TEMPLATE #}
-  <button type='button' title='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+  <button type='button' title='{{ 'Duplicate'|trans }}' aria-label='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
     <i class='fas fa-copy fa-fw'></i>
   </button>
 
   {# DOWNLOAD #}
-  <button type='button' title='{{ 'Download template'|trans }}' data-action='download-template' data-id='{{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+  <button type='button' title='{{ 'Download template'|trans }}' aria-label='{{ 'Download template'|trans }}' data-action='download-template' data-id='{{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
     <i class='fas fa-download fa-fw'></i>
   </button>
 
   {# IMPORT #}
   {% if App.Request.getScriptName|split('/')|last == 'team.php' -%}
-    <button type='button' title='{{ 'Import to your profile'|trans }}' data-action='import-template' data-id='{{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+    <button type='button' title='{{ 'Import to your profile'|trans }}' aria-label='{{ 'Import to your profile'|trans }}' data-action='import-template' data-id='{{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
       <i class='fas fa-file-import fa-fw'></i>
     </button>
   {% endif %}
 
   {# RIGHT PART #}
   {# TOGGLE PIN #}
-  <button type='button' title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ Entity.id }}' class='btn {{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 lh-normal border-0 ml-auto mr-2'>
+  <button type='button' title='{{ 'Toggle pin (add to create button menu)'|trans }}' aria-label='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ Entity.id }}' class='btn {{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 lh-normal border-0 ml-auto mr-2'>
     <i class='fas fa-thumbtack fa-fw {{- not Entity.Pins.isPinned ? ' color-weak' }}'></i>
   </button>
 
