fix extra fields loader button

--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -188,7 +188,7 @@
 
         <div class='modal-footer'>
           <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Close'|trans }}</button>
-          <button id='applyMetadataLoadBtn' type='submit' class='btn btn-primary' disabled data-action='load-metadata-from-textarea'>{{ 'Apply'|trans }}</button>
+          <button id='applyMetadataLoadBtn' type='button' class='btn btn-primary' disabled data-action='load-metadata-from-textarea'>{{ 'Apply'|trans }}</button>
         </div>
       </div>
     </form>
