--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -130,7 +130,7 @@
             <div class='dropdown-divider'></div>
             {% if App.Session.has('is_auth') and not App.Session.has('is_anon') %}
               <a class='dropdown-item' href='dashboard.php'><i class='fas fa-table-columns fa-fw'></i> {{ 'Dashboard'|trans }}</a>
-              <a class='dropdown-item' href='ucp.php?tab=3'><i class='fas fa-layer-group fa-fw'></i> {{ 'My templates'|trans }}</a>
+              <a class='dropdown-item' href='ucp.php?tab=3'><i class='fas fa-layer-group fa-fw'></i> {{ 'Templates'|trans }}</a>
               <a class='dropdown-item' href='profile.php'><i class='fas fa-user fa-fw'></i> {{ 'My profile'|trans }}</a>
               <a class='dropdown-item' data-action='toggle-todolist' href='#'><i class='fas fa-list fa-fw'></i> {{ 'Todolist'|trans }}</a>
               <a class='dropdown-item' href='ucp.php'><i class='fas fa-cogs fa-fw'></i> {{ 'User panel'|trans }}</a>
