--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -101,62 +101,66 @@
 
 {# TAB 1 SCHEDULER #}
 <div data-tabcontent='1' hidden>
-  {% if itemsArr|length == 0 %}
-    {{ 'No bookable items.'|trans|msg('warning', false) }}
-  {% else %}
-  <div id='selectBookableWarningDiv' hidden>{{ 'Start by selecting a resource below'|trans|msg('info', false) }}</div>
-  <div class='row mb-3'>
-    <div class='col-md-3'>
-      {# CATEGORY #}
-      {% if App.Config.configArr.debug -%}
-        <!-- [html-validate-disable-next wcag/h32: no submit button] -->
-      {%- endif %}
-      <form>
-        {% if App.Config.configArr.debug -%}
-          <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
-        {%- endif %}
-        <select name='cat' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter category'>
-          <option value=''>{{ 'Filter by type'|trans }}</option>
-          {% for category in bookableItemsTypes %}
-            <option style='color:#{{ category.color }}' value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
-          {{ category.title|raw }}</option>
-          {% endfor %}
-        </select>
-      </form>
-    </div>
+  {% include 'scope-button.html' with {'reload': 'page'} %}
 
-    <div class='col-md-3'>
-      {# ITEM LIST #}
-      {% if App.Config.configArr.debug -%}
-        <!-- [html-validate-disable-next wcag/h32: no submit button] -->
-      {%- endif %}
-      <form>
+  <div id='mainSchedulerContent'>
+    {% if itemsArr|length == 0 %}
+      {{ 'No bookable items.'|trans|msg('warning', false) }}
+    {% else %}
+    <div id='selectBookableWarningDiv' hidden>{{ 'Start by selecting a resource below'|trans|msg('info', false) }}</div>
+    <div class='row mb-3'>
+      <div class='col-md-3'>
+        {# CATEGORY #}
         {% if App.Config.configArr.debug -%}
-          <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+          <!-- [html-validate-disable-next wcag/h32: no submit button] -->
         {%- endif %}
-        <select id='itemSelect' name='item' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter item'>
-          <option value=''>{{ 'Select an equipment'|trans }}</option>
-          {% for item in itemsArr %}
-            {# data-color is used to set the background during initial drag #}
-            <option data-color='{{ item.category_color }}' style='color:#{{ item.category_color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected' }}>
-            {{ item.category_title|raw }} - {{ item.title|raw }}</option>
-          {% endfor %}
-        </select>
-      </form>
-    </div>
-
-    {% if bookableItemData %}
-      <div class='col-md-3 ml-auto'>
-        <div class='input-group justify-content-end flex-nowrap'>
-          <div class='input-group-prepend'>
-            <button class='btn btn-secondary' type='button' data-action='remove-param-reload' data-target='item'>X</button>
-          </div>
-          <a href='database.php?mode=view&id={{ bookableItemData.id }}' class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.category_color }}' class='catstat-btn category-btn mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title|raw }}</a>
-        </div>
+        <form>
+          {% if App.Config.configArr.debug -%}
+            <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+          {%- endif %}
+          <select name='cat' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter category'>
+            <option value=''>{{ 'Filter by type'|trans }}</option>
+            {% for category in bookableItemsTypes %}
+              <option style='color:#{{ category.color }}' value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
+            {{ category.title|raw }}</option>
+            {% endfor %}
+          </select>
+        </form>
       </div>
+
+      <div class='col-md-3'>
+        {# ITEM LIST #}
+        {% if App.Config.configArr.debug -%}
+          <!-- [html-validate-disable-next wcag/h32: no submit button] -->
+        {%- endif %}
+        <form>
+          {% if App.Config.configArr.debug -%}
+            <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+          {%- endif %}
+          <select id='itemSelect' name='item' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter item'>
+            <option value=''>{{ 'Select an equipment'|trans }}</option>
+            {% for item in itemsArr %}
+              {# data-color is used to set the background during initial drag #}
+              <option data-color='{{ item.category_color }}' style='color:#{{ item.category_color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected' }}>
+              {{ item.category_title|raw }} - {{ item.title|raw }}</option>
+            {% endfor %}
+          </select>
+        </form>
+      </div>
+
+      {% if bookableItemData %}
+        <div class='col-md-3 ml-auto'>
+          <div class='input-group justify-content-end flex-nowrap'>
+            <div class='input-group-prepend'>
+              <button class='btn btn-secondary' type='button' data-action='remove-param-reload' data-target='item'>X</button>
+            </div>
+            <a href='database.php?mode=view&id={{ bookableItemData.id }}' class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.category_color }}' class='catstat-btn category-btn mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title|raw }}</a>
+          </div>
+        </div>
+      {% endif %}
+    </div>
     {% endif %}
   </div>
-  {% endif %}
   <div id='scheduler' data-lang='{{ App.getJsLang }}' data-render={{ itemsArr|length > 0 ? 'true' : 'false' }}></div>
 </div>
 
@@ -201,14 +205,8 @@
 {# TAB 3 TEMPLATE #}
 <div data-tabcontent='3' hidden>
   <h3 class='p-2 pl-3 section-title'><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
-  {% if App.Request.query.has('templateid') %}
-    {% include 'view-edit-template.html' %}
-  {% else %}
-    {% include 'show-templates-select.html' %}
-  {% endif %}
+  <p class='mt-3'>All the experiments templates are now visible at one place: the <a href='/ucp.php?tab=3'>User Control Panel</a>.</p>
 </div>
-
-        {# <p>{{ 'No templates from other members of the team to display!'|trans }}</p> #}
 
 {# TAB 4 EMAIL #}
 <div data-tabcontent='4' hidden>
