--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -34,7 +34,7 @@
         <i class='fas fa-fw fa-table'></i>
       </button>
 
-      {% include 'scope-button.html' with {'reload': 'itemList,scopeBtn'} %}
+      {% include 'scope-button.html' with {'reload': 'itemList,scopeBtn', 'target': 'scope_' ~ Entity.type} %}
 
       <button class='btn btn-secondary btn-sm mr-2' type='button' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}' aria-expanded='false' aria-controls='filtersDiv'>
         <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
