--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -47,7 +47,7 @@
             <option value='' selected disabled>{{ 'Select a team'|trans }}</option>
             {# on this page, only show the visible teams #}
             {% for team in teamsArr|filter(v => v.visible == 1) %}
-              <option value='{{ team.id }}'>{{ team.name }}</option>
+              <option value='{{ team.id }}'>{{ team.name|raw }}</option>
             {% endfor %}
           </select>
         </div>
