--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -101,7 +101,9 @@
 
 {# TAB 1 SCHEDULER #}
 <div data-tabcontent='1' hidden>
-  {% include 'scope-button.html' with {'reload': 'page', 'target': 'scope_bookable'} %}
+  <div class='mb-2'>
+    {% include 'scope-button.html' with {'reload': 'page', 'target': 'scope_items'} %}
+  </div>
 
   <div id='mainSchedulerContent'>
     {% if itemsArr|length == 0 %}
@@ -121,7 +123,7 @@
           <select name='cat' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter category'>
             <option value=''>{{ 'Filter by type'|trans }}</option>
             {% for category in bookableItemsTypes %}
-              <option style='color:#{{ category.color }}' value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
+              <option value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
             {{ category.title|raw }}</option>
             {% endfor %}
           </select>
@@ -141,7 +143,7 @@
             <option value=''>{{ 'Select an equipment'|trans }}</option>
             {% for item in itemsArr %}
               {# data-color is used to set the background during initial drag #}
-              <option data-color='{{ item.category_color }}' style='color:#{{ item.category_color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected' }}>
+              <option data-color='{{ item.category_color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected' }}>
               {{ item.category_title|raw }} - {{ item.title|raw }}</option>
             {% endfor %}
           </select>
