--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -133,7 +133,7 @@
       <label for='open_team' class='col-form-label'>{{ 'Select which team will be open to the world in open science mode'|trans }}</label>
       <select id='open_team' data-trigger='change' data-model='config' data-target='open_team' class='form-control col-md-3'>
         {% for team in teamsArr %}
-          <option {{ App.Config.configArr.open_team == team.id ? ' selected' }} value='{{ team.id }}'>{{ team.name }}</option>
+          <option {{ App.Config.configArr.open_team == team.id ? ' selected' }} value='{{ team.id }}'>{{ team.name|raw }}</option>
         {% endfor %}
       </select>
     </div>
@@ -996,24 +996,37 @@
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Audit Logs'|trans }}</h3>
   <div class='pl-3 mb-5'>
     <p id='auditLogsTableLabel'>{{ 'This table lists the most recent events recorded in the application and worth keeping a trace of.'|trans }}</p>
-    <table id='auditLogsTable' class='table' aria-labelledby='auditLogsTableLabel' data-table-sort='true'>
+    {# Refresh button #}
+    <div class='text-center'>
+      <button type='button' aria-label='{{ 'Refresh'|trans }}' class='btn btn-secondary btn-sm mb-2' data-reload-on-click='auditLogsTable'><i class='fas fa-rotate color-white mr-1'></i>{{ 'Refresh'|trans }}</button>
+    </div>
+    {# Logs are presented in a sortable table #}
+    <table class='table' aria-labelledby='auditLogsTableLabel' data-table-sort='true'>
       <thead>
         <tr>
           <th scope='col'>{{ 'Category'|trans }}</th>
           <th scope='col'>{{ 'Created at'|trans }}</th>
           <th scope='col'>{{ 'Content'|trans }}</th>
-          <th scope='col'>{{ 'Userid'|trans }}</th>
+          <th scope='col'>{{ 'Actor'|trans }}</th>
+          <th scope='col'>{{ 'Target user'|trans }}</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id='auditLogsTable'>
         {% for log in auditLogsArr %}
           <tr>
             <td>{{ log.category }}</td>
             <td><span class='relative-moment' title='{{ log.created_at }}'></span></td>
             <td>{{ log.body }}</td>
             <td>
-              {%- if log.userid != 0 -%}
-                <a class='p-1 rounded hl-hover-gray' href='?tab=3&q=&userid={{ log.userid }}'>{{ log.userid }}</a>
+              {%- if log.requester_userid != 0 -%}
+                <a class='p-1 rounded hl-hover-gray' href='?tab=3&q=&userid={{ log.requester_userid }}'>{{ log.requester_userid }}</a>
+              {%- else -%}
+                <span class='p-1'>&ndash;</span>
+              {%- endif -%}
+            </td>
+            <td>
+              {%- if log.target_userid != 0 -%}
+                <a class='p-1 rounded hl-hover-gray' href='?tab=3&q=&userid={{ log.target_userid }}'>{{ log.target_userid }}</a>
               {%- else -%}
                 <span class='p-1'>&ndash;</span>
               {%- endif -%}
